# bitcoin-node-scanner

./: .coveragerc  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  OPTIMIZATIONS_README.md  PROJECT_STRUCTURE.md  README.md  SETUP_INSTRUCTIONS.md  alembic.ini  bitcoin_scanner.db  bitcoin_scanner.db.015eee9.bak  electrum_monitor.db  electrum_monitor.py  env.example  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
_bmad/: config.user.yaml  config.yaml
config/: config.yaml
docs/: API.md  DATABASE.md  INSTALLATION.md  METHODOLOGY.md  USAGE.md  deploy-frontend.md
frontend/: .env.example  .gitignore  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
migrations/: README  env.py
scripts/: bootstrap-frontend-host.sh  download_geoip_dbs.sh  full_db_scan.py  import_json_to_db.py  migrate.py  optimized_scan.sh  quick_scan.sh  quick_scan_v1.sh  setup.sh  setup_v1.sh
src/: __init__.py  analyzer.py  credit_tracker.py  example_ips.py  geoip.py  optimized_scanner.py  reporter.py  scanner.py  utils.py
tests/: conftest.py  test_analyzer.py  test_credit_tracker.py  test_cve_matcher.py  test_db_analysis.py  test_db_cli.py  test_db_connection.py  test_db_integration.py  test_db_models.py  test_db_repositories.py  test_db_repositories_extended.py  test_db_scanner_cve_linking.py  test_db_scanner_integration_extended.py  test_example_ips.py  test_full_db_scan.py  test_geoip.py  test_import_json_to_db.py  test_nvd_api.py  test_nvd_client.py  test_nvd_service.py  test_reporter.py  test_scanner.py  (+4 more)
(+228 files in other folders)
